--- a/clase_4/index.html
+++ b/clase_4/index.html
@@ -19,7 +19,7 @@
         <ul class="menuSuperior">
             <li><a href="index.html">Home</a></li>
             <li><a href="multimedia.html"> Multimedia</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
             <li><a href="#">Nosotros</a></li>
         </ul>
         <br/>
@@ -34,15 +34,16 @@
     <h2> ilustraciones </h2>
     <h3> colores frios</h3>
     <div class="contenidoImagen">
-    <img src="./ilust_2.jpg" alt="img 2">
+    <img src="./ilustraciones/ilust_2.jpg" alt="img 2">
 </div>
+
 <h3> colores calidos</h3>
-<br>
 <div class="contenidoImagen">
-<img src="./ilust_3.jpg" alt="img 3">
+<img src="./ilustraciones/ilust_3.jpg" alt="img 3">
 </div>
 
 </section>
+
 
 <aside class="contenidoSugerencias">
 
@@ -60,7 +61,7 @@
 
     <div class="colores">
         <h2>Psicologia del color </h2>
-        <img src="./color_wheel.jpg" alt="colores">
+        <img src="./ilustraciones/color_wheel.jpg" alt="colores">
     </div>
 
 </aside>
