--- a/clase_6_formularios/matias web/actividad_clase5.html
+++ b/clase_6_formularios/matias web/actividad_clase5.html
@@ -29,7 +29,7 @@
 contenido
 </main>
 <aside class="aside">
-    <form action="" >
+    <form action="" method="post">
 <fieldset class="contenedor_input_general">
 <legend> Registro</legend>
     <h3>Completar el siguente formulario</h3>
