--- a/clase_7/index.html
+++ b/clase_7/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="./estilos.css">
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
     <h1>Mobile First</h1>
+    </header>
 
     <section class="tienda">
-
         <div>
             <img src="./imagenes/celular.jpg" alt="">
         </div>
@@ -44,9 +45,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur maiores distinctio iure sunt, itaque amet nemo dolor. Ullam voluptatum ipsam dolorem maxime, modi a quos neque consequuntur cumque, sint error.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, natus. Voluptate ab rerum repudiandae, porro debitis deleniti, obcaecati laudantium optio eaque nisi sapiente voluptatum? Enim autem beatae laudantium sed consequuntur.
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur maiores distinctio iure sunt, itaque amet nemo dolor. Ullam voluptatum ipsam dolorem maxime, modi a quos neque consequuntur cumque, sint error.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, natus. Voluptate ab rerum repudiandae, porro debitis deleniti, obcaecati laudantium optio eaque nisi sapiente voluptatum? Enim autem beatae laudantium sed consequuntur.
-            </p>
+
             <div class="agregado"> PRUEBAS 1</div>
             <div> PRUEBAS 2</div>
         </div>
